--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     //compileOnly 'com.google.android.wearable:wearable:2.6.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
+
+    //EventBus
+    implementation 'org.greenrobot:eventbus:3.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
