--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,9 @@ android {
         applicationId "com.telemedicine.maulaji"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 5
-        versionName "0.3"
+        versionCode 6
+        versionName "0.7"
         multiDexEnabled true
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -78,5 +77,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.1.0'
     //compileOnly 'com.google.android.wearable:wearable:2.6.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
+    // Stripe Android SDK
+    implementation 'com.stripe:stripe-android:16.1.1'
 }
 apply plugin: 'com.google.gms.google-services'
