--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
     // Stripe Android SDK
     implementation 'com.stripe:stripe-android:16.1.1'
+    implementation 'com.hbb20:ccp:2.5.3'
 }
 apply plugin: 'com.google.gms.google-services'
